# bevy-saltius-finni

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/: world.ldtk
assets/resources/: genes.ron
assets/ui/cobweb/: buttons.cob  credits.cob  death.cob  fonts.cob  hud.cob  main.cob  pause.cob
game/core/sf_events/: Cargo.toml
game/core/sf_events/src/: lib.rs
game/sf_gene/: Cargo.toml
game/sf_gene/src/: lib.rs
game/sf_ui/: Cargo.toml
game/sf_ui/src/: plugin.rs  states.rs
game/sf_ui/src/menus/: credits.rs  death_menu.rs  mod.rs  pause.rs
game/sf_ui/src/ui/: interaction.rs  mod.rs  theme.rs  widget.rs
sf_ui/: Cargo.toml  cargo.toml
sf_ui/src/: assets.rs  lib.rs  plugin.rs  states.rs
sf_ui/src/cobweb/: attributes.rs  buttons.rs  mod.rs
sf_ui/src/menus/: main_menu.rs  mod.rs  settings.rs
sf_ui/src/ui/: theme.rs
src/: asset_tracking.rs  audio.rs  camera.rs  dev_tools.rs  event.rs  main.rs
src/assets/: collections.rs  mod.rs
src/demo/: level.rs  movement.rs  player.rs
src/menus/: credits.rs  death.rs  main.rs  mod.rs  pause.rs  settings.rs
src/platformer/: hud.rs  level.rs  mod.rs  player.rs
src/platformer/entities/: button.rs  checkpoint.rs  door.rs  mod.rs
src/player/: animation.rs  death.rs  genes.rs  mod.rs  movement.rs  physics.rs
src/screens/: death_menu.rs  gameplay.rs  loading.rs  mod.rs  splash.rs  title.rs
src/theme/: interaction.rs
src/ui/: cobweb.rs  interaction.rs  mod.rs  palette.rs  theme.rs  widget.rs
src/utils/: animation.rs  mod.rs
