[workspace]
members=[ "sf_ui" ]

[workspace.package]
version="0.1.0"
edition="2024"
description="2D MetroidVania game about an alien that dies after a few jumps."
repository="https://github.com/Galdormin/bevy-saltius-finni"
authors=[ "Galdormin <theo.plenet@gmail.com>" ]

[workspace.dependencies]
bevy={ version="0.16.1", features=[ "wayland" ] }
rand={ version="0.9.1" }
log={ version="0.4", features=[ "max_level_debug", "release_max_level_warn" ] }
tracing={ version="0.1", features=[ "max_level_debug", "release_max_level_warn" ] }
bevy_modern_pixel_camera="0.3.1"
avian2d="0.3.1"
leafwing-input-manager="0.17.0"
bevy_ecs_ldtk="0.12.0"
bevy_asset_loader={ version="0.23.0", features=[ "2d" ] }
bevy_common_assets={ version="0.13.0", features=[ "ron" ] }
serde="1.0.219"
bevy_cobweb_ui={ version="0.21.0", default-features=false }
bevy_cobweb="0.17.2"

[package]
name="bevy_saltius_finni"
version.workspace=true
edition.workspace=true
description.workspace=true
repository.workspace=true
authors.workspace=true

[dependencies]
sf_ui={ path="sf_ui" }

bevy={ workspace=true }
rand={ workspace=true }
log={ workspace=true }
tracing={ workspace=true }
bevy_modern_pixel_camera={ workspace=true }
avian2d={ workspace=true }
leafwing-input-manager={ workspace=true }
bevy_ecs_ldtk={ workspace=true }
bevy_asset_loader={ workspace=true }
bevy_common_assets={ workspace=true }
serde={ workspace=true }
bevy_cobweb_ui={ workspace=true }
bevy_cobweb={ workspace=true }

# See: <https://docs.rs/getrandom/0.3.3/getrandom/#webassembly-support>.
[target.wasm32-unknown-unknown.dependencies]
getrandom={ version="0.3", features=[ "wasm_js" ] }

[patch.crates-io]
getrandom={ git="https://github.com/benfrankel/getrandom" }

[features]
default=[ "dev_native" ]
dev=[ "bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/bevy_ui_debug", "bevy/track_location" ]
dev_native=[ "dev", "bevy/file_watcher", "bevy/embedded_watcher", "bevy_cobweb_ui/hot_reload" ]

[package.metadata.bevy_cli.release]
default-features=false

[package.metadata.bevy_cli.web]
default-features=false

[package.metadata.bevy_cli.web.dev]
features=[ "dev" ]

[lints.rust]
unexpected_cfgs={ level="warn", check-cfg=[ "cfg(bevy_lint)" ] }

[lints.clippy]
too_many_arguments="allow"
type_complexity="allow"
nonstandard_macro_braces="warn"

# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level=1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level=3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions=false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units=1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto="thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits="release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level="s"
# Strip all debugging information from the binary to slightly reduce file size.
strip="debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits="dev"
opt-level=0
debug="line-tables-only"
codegen-units=4

[profile.ci.package."*"]
opt-level=0
