[workspace]
members = [ "sf_ui" ]

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "2D MetroidVania game about an alien that dies after a few jumps."
repository = "https://github.com/Galdormin/bevy-saltius-finni"
authors = [ "Galdormin <theo.plenet@gmail.com>" ]

[workspace.dependencies]
rand = "0.9.2"
serde = "1.0.219"

# Compile low-severity logs out of native builds for performance.
log = { version = "0.4.29", features = [ "max_level_debug", "release_max_level_warn" ] }
# Compile low-severity logs out of web builds for performance.
tracing = { version = "0.1", features = [ "max_level_debug", "release_max_level_warn" ] }

bevy = { version = "0.18", features = [ "wayland" ] }
# TODO: update these deps to versions compatible with bevy 0.18
bevy_modern_pixel_camera = "0.5"
avian2d = "0.6"
leafwing-input-manager = "0.20"
bevy_ecs_ldtk = "0.14"
bevy_asset_loader = { version = "0.25", features = [ "2d" ] }
bevy_common_assets = { version = "0.15", features = [ "ron" ] }

[package]
name = "bevy_saltius_finni"
authors = [ "Galdormin <theo.plenet@gmail.com>" ]
version = "0.1.0"
edition = "2024"

[dependencies]
sf_ui = { path = "sf_ui" }

bevy = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
bevy_modern_pixel_camera = { workspace = true }
avian2d = { workspace = true }
leafwing-input-manager = { workspace = true }
bevy_ecs_ldtk = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_common_assets = { workspace = true }
serde = { workspace = true }

# See: <https://docs.rs/getrandom/0.3.3/getrandom/#webassembly-support>.
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.4", features = [ "wasm_js" ] }
# In addition to enabling the `wasm_js` feature, you need to include `--cfg 'getrandom_backend="wasm_js"'`
# in your rustflags for both local and CI/CD web builds, taking into account that rustflags specified in
# multiple places are NOT combined (see <https://github.com/rust-lang/cargo/issues/5376>).
# Alternatively, you can opt out of the rustflags check with this patch:
[patch.crates-io]
getrandom = { git = "https://github.com/benfrankel/getrandom" }

[features]
# Default to a native dev build.
default = [ "dev_native" ]
dev = [
    # Improve compile times for dev builds by linking Bevy as a dynamic library.
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    # Improve error messages coming from Bevy
    "bevy/track_location",
]
dev_native = [
    "dev",
    # Enable asset hot reloading for native dev builds.
    "bevy/file_watcher",
    # Enable embedded asset hot reloading for native dev builds.
    "bevy/embedded_watcher",
]

[package.metadata.bevy_cli.release]
default-features = false

[package.metadata.bevy_cli.web]
default-features = false

[package.metadata.bevy_cli.web.dev]
features = [ "dev" ]

[lints.rust]
# Mark `bevy_lint` as a valid `cfg`, as it is set when the Bevy linter runs.
unexpected_cfgs = { level = "warn", check-cfg = [ "cfg(bevy_lint)" ] }

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"

# <https://thebevyflock.github.io/bevy_cli/bevy_lint/lints/>
[package.metadata.bevy_lint]
# panicking_methods = "deny"
# pedantic = "warn"

# Compile with Performance Optimizations:
# <https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations>

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# This profile will be used by `bevy run web` automatically.
[profile.web-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
